--- a/source/Makefile.am
+++ b/source/Makefile.am
@@ -1,38 +1,11 @@
-#    This file is part of Advanced Strategic Command; http://www.asc-hq.de
-#    Copyright (C) 1994-1999  Martin Bickel  and  Marc Schellenberger
-#    Linux port by Tom Wilson (tmwilson@cyberhighway.net)
-#
-#  This program is free software; you can redistribute it and/or modify
-#  it under the terms of the GNU General Public License as published by
-#  the Free Software Foundation; either version 2 of the License, or
-#  (at your option) any later version.
-#
-#  This program is distributed in the hope that it will be useful,
-#  but WITHOUT ANY WARRANTY; without even the implied warranty of
-#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#  GNU General Public License for more details.
-#
-#  You should have received a copy of the GNU General Public License
-#  along with this program; if not, write to the Free Software
-#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-#
-#  If you have any questions, the author can be reached at 
-#  tmwilson@cyberhighway.net
-#
+####### kdevelop will overwrite this part!!! (begin)##########
+bin_PROGRAMS = asc
+asc_SOURCES = weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp 
+asc_LDADD   = ./sdl/libsdl.a ./libs/triangul/libtriangul.a -lSDL -lpthread -lbz2
 
-bin_PROGRAMS = acs
+SUBDIRS = docs sdl libs 
 
-acs_SOURCES =   attack.cpp basestrm.cpp building.cpp controls.cpp dialog.cpp \
-		dlg_box.cpp gamedlg.cpp gui.cpp keybp.cpp loadbi3.cpp        \
-		loaders.cpp loadjpg.cpp loadpcx.cpp misc.cpp missions.cpp    \
-		mousehnd.cpp network.cpp newfont.cpp palette.cpp pd.cpp      \
-		sg.cpp sgstream.cpp spfst.cpp strtmesg.cpp timer.cpp         \
-		typen.cpp vesa.cpp weather.cpp kbhit.cpp
+EXTRA_DIST = attack.cpp basegfx.cpp basestrm.cpp building.cpp controls.cpp dialog.cpp dlg_box.cpp gamedlg.cpp gui.cpp loadbi3.cpp loaders.cpp loadjpg.cpp loadpcxc.cpp misc.cpp missions.cpp network.cpp newfont.cpp palette.cpp pd.cpp sg.cpp sgstream.cpp spfst.cpp stack.cpp strtmesg.cpp typen.cpp weather.cpp attack.h basegfx.h basegui.h basestrm.h basetemp.h building.h controls.h dialog.h dlg_box.h gamedlg.h global.h gui.h keybp.h loadbi3.h loaders.h loadjpg.h loadpcx.h misc.h missions.h mousehnd.h network.h newfont.h palette.h pd.h sg.h sgstream.h spfldutl.h spfst.h stack.h strtmesg.h timer.h typen.h weather.h 
 
-noinst_HEADERS = artint.h controls.h flview.h lzw.h realint.h typen.h        \
-		 attack.h dialog.h gamedlg.h misc.h sg.h vesa.h basegui.h    \
-		 dlg_box.h gui.h missions.h sgstream.h weather.h basestrm.h  \
-		 edevents.h keybp.h mousehnd.h spfldutl.h basetemp.h edgen.h \
-		 loadbi3.h network.h spfst.h building.h edglobal.h loaders.h \
-		 newfont.h stack.h cdrom.h edmisc.h loadjpg.h palette.h      \
-		 strtmesg.h config.h edselfnt.h loadpcx.h pd.h timer.h       \
+####### kdevelop will overwrite this part!!! (end)############
+bin_PROGRAMS = asc
