--- a/configure.in
+++ b/configure.in
@@ -8,13 +8,25 @@ AM_INIT_AUTOMAKE(asc,0.1)
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_CXX
+CXXFLAGS="$CXXFLAGS -I./ -DHEXAGON -Dsgmain -DFREEMAPZOOM -funsigned-char -I/usr/lib/SDL/include -D_NOASM_ -DNEWKEYB"
 AC_PROG_RANLIB
 dnl Checks for libraries.
 
 dnl Checks for header files.
+AC_HEADER_STDC
+AC_CHECK_HEADERS(malloc.h strings.h sys/dirent.h)
+AC_HEADER_DIRENT
+AC_HEADER_TIME
 
 dnl Checks for typedefs, structures, and compiler characteristics.
+AC_C_CONST
+AC_TYPE_SIZE_T
 
 dnl Checks for library functions.
+AC_CHECK_FUNCS(select)
+AC_CHECK_FUNCS(itoa)
+AC_CHECK_FUNCS(stricmp)
+AC_CHECK_FUNCS(kbhit)
+
 
 AC_OUTPUT(Makefile source/Makefile source/docs/Makefile source/docs/en/Makefile source/sdl/Makefile source/libs/triangul/Makefile source/libs/Makefile )
