--- a/configure.in
+++ b/configure.in
@@ -17,10 +17,16 @@ AC_HEADER_STDC
 AC_CHECK_HEADERS(malloc.h strings.h sys/dirent.h)
 AC_HEADER_DIRENT
 AC_HEADER_TIME
+AC_CHECK_HEADER( SDL/SDL.h, , AC_MSG_ERROR( ASC requires SDL headers to be present ) )
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_SIZE_T
+
+dnl Checks for libraries.
+AC_CHECK_LIB( pthread, pthread_create )
+AC_CHECK_LIB( SDL, SDL_GetVideoSurface, , AC_MSG_ERROR( ASC requires SDL to be installed ) )
+AC_CHECK_LIB( bz2, bzReadOpen )
 
 dnl Checks for library functions.
 AC_CHECK_FUNCS(select)
