Removed file name length limitation under linux  No weapon sound for attacked units any more (only attacker)

--- a/source/sdl/Makefile.in
+++ b/source/sdl/Makefile.in
@@ -68,9 +68,9 @@ VERSION = @VERSION@
 
 noinst_LIBRARIES = libsdl.a
 
-libsdl_a_SOURCES = timer.cpp graphics.cpp events.cpp sound.cpp
+libsdl_a_SOURCES = sound.cpp timer.cpp graphics.cpp events.cpp 
 
-EXTRA_DIST = events.cpp graphics.cpp graphics.h timer.cpp sound.cpp sound.h
+EXTRA_DIST = events.cpp graphics.cpp graphics.h timer.cpp sound.cpp sound.h 
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../../config.h
 CONFIG_CLEAN_FILES = 
@@ -82,7 +82,7 @@ CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 libsdl_a_LIBADD = 
-libsdl_a_OBJECTS =  timer.o graphics.o events.o sound.o
+libsdl_a_OBJECTS =  sound.o timer.o graphics.o events.o
 AR = ar
 CXXFLAGS = @CXXFLAGS@
 CXXCOMPILE = $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
@@ -93,7 +93,7 @@ DIST_COMMON =  Makefile.am Makefile.in
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
-TAR = gtar
+TAR = tar
 GZIP_ENV = --best
 DEP_FILES =  .deps/events.P .deps/graphics.P .deps/sound.P .deps/timer.P
 SOURCES = $(libsdl_a_SOURCES)
