--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -68,11 +68,12 @@ VERSION = @VERSION@
 
 ####### kdevelop will overwrite this part!!! (end)############
 bin_PROGRAMS = asc
-asc_SOURCES = weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp soundList.cpp
+asc_SOURCES = soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp 
 asc_LDADD = ./sdl/libsdl.a ./libs/triangul/libtriangul.a -lSDL -lpthread -lbz2
+
 SUBDIRS = docs sdl libs 
 
-EXTRA_DIST = attack.cpp basegfx.cpp basestrm.cpp building.cpp controls.cpp dialog.cpp dlg_box.cpp gamedlg.cpp gui.cpp loadbi3.cpp loaders.cpp loadjpg.cpp loadpcxc.cpp misc.cpp missions.cpp network.cpp newfont.cpp palette.cpp pd.cpp sg.cpp sgstream.cpp spfst.cpp stack.cpp strtmesg.cpp typen.cpp weather.cpp attack.h basegfx.h basegui.h basestrm.h basetemp.h building.h controls.h dialog.h dlg_box.h gamedlg.h global.h gui.h keybp.h loadbi3.h loaders.h loadjpg.h loadpcx.h misc.h missions.h mousehnd.h network.h newfont.h palette.h pd.h sg.h sgstream.h spfldutl.h spfst.h stack.h strtmesg.h timer.h typen.h weather.h soundList.cpp soundList.h
+EXTRA_DIST = attack.cpp basegfx.cpp basestrm.cpp building.cpp controls.cpp dialog.cpp dlg_box.cpp gamedlg.cpp gui.cpp loadbi3.cpp loaders.cpp loadjpg.cpp loadpcxc.cpp misc.cpp missions.cpp network.cpp newfont.cpp palette.cpp pd.cpp sg.cpp sgstream.cpp spfst.cpp stack.cpp strtmesg.cpp typen.cpp weather.cpp attack.h basegfx.h basegui.h basestrm.h basetemp.h building.h controls.h dialog.h dlg_box.h gamedlg.h global.h gui.h keybp.h loadbi3.h loaders.h loadjpg.h loadpcx.h misc.h missions.h mousehnd.h network.h newfont.h palette.h pd.h sg.h sgstream.h spfldutl.h spfst.h stack.h strtmesg.h timer.h typen.h weather.h soundList.cpp soundList.h 
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = ../config.h
 CONFIG_CLEAN_FILES = 
@@ -83,10 +84,10 @@ DEFS = @DEFS@ -I. -I$(srcdir) -I..
 CPPFLAGS = @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
-asc_OBJECTS =  weather.o typen.o strtmesg.o stack.o spfst.o sgstream.o \
-sg.o pd.o palette.o newfont.o network.o missions.o misc.o loadpcxc.o \
-loadjpg.o loaders.o loadbi3.o gui.o gamedlg.o dlg_box.o dialog.o \
-controls.o building.o basestrm.o basegfx.o attack.o soundList.o
+asc_OBJECTS =  soundList.o weather.o typen.o strtmesg.o stack.o spfst.o \
+sgstream.o sg.o pd.o palette.o newfont.o network.o missions.o misc.o \
+loadpcxc.o loadjpg.o loaders.o loadbi3.o gui.o gamedlg.o dlg_box.o \
+dialog.o controls.o building.o basestrm.o basegfx.o attack.o
 asc_DEPENDENCIES =  ./sdl/libsdl.a ./libs/triangul/libtriangul.a
 asc_LDFLAGS = 
 CXXFLAGS = @CXXFLAGS@
@@ -99,7 +100,7 @@ NEWS TODO
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(HEADERS) $(TEXINFOS) $(EXTRA_DIST)
 
-TAR = gtar
+TAR = tar
 GZIP_ENV = --best
 DEP_FILES =  .deps/attack.P .deps/basegfx.P .deps/basestrm.P \
 .deps/building.P .deps/controls.P .deps/dialog.P .deps/dlg_box.P \
